# rusty-dl

./: Cargo.toml  LICENSE  README.md  RequestDetails.json  test.twitter  test.txt  test.youtube
cli/: .gitignore  Cargo.toml  README.md
cli/src/: main.rs
examples/: README.md  resource.rs  twitter.rs  youtube.rs
src/: errors.rs  header.rs  lib.rs  main.rs  resource.rs  twitter.rs  youtube.rs
src/twitter/: details.rs  utils.rs
src/youtube/: initial_data.rs  video_data.rs
src/youtube/video_data/: index.rs  info.rs  length_text.rs  menu.rs  nav_endpoint.rs  short_by_line_text.rs  thumbnail.rs  title.rs
tests/: twitter.rs  youtube.rs
