[package]
name = "rusty_dl"
authors = ["yatsu"]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["download", "videos", "youtube", "twitter", "medias"]
description = "A crate for downloading youtube videos, twitter medias (videos, images, gif) from tweets and files on the web."
readme = "README.md"
repository = "https://github.com/DevYatsu/rusty-dl"
categories = ["internet", "media", "utilities"]


# dev dependencies setup

[dependencies]
futures = {version = "0.3.30"}
percent-encoding = {version = "2.3.1"}
regex = {version = "1.10.4"}
reqwest = "0.12.2"
rusty_ytdl =  {features = ["blocking", "ffmpeg"], version = "0.7.1"}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = {version = "1.0.115"}
serde_urlencoded = {version = "0.7.1"}
tokio = {features = ["full"], version =  "1.37.0"}
url = "2.5.0"

# release dependencies setup

# [dependencies]
# futures = {version = "0.3.30", optional = true}
# percent-encoding = {version = "2.3.1", optional = true}
# regex = {version = "1.10.4", optional = true}
# reqwest = "0.12.2"
# rusty_ytdl =  {features = ["blocking", "ffmpeg"], version = "0.7.1", optional = true}
# serde = {version = "1.0.197", features = ["derive"], optional = true}
# serde_json = {version = "1.0.115", optional = true}
# serde_urlencoded = {version = "0.7.1", optional = true}
# tokio = {features = ["full"], version =  "1.37.0"}
# url = "2.5.0"

# [features]
# full = ["youtube", "twitter", "resource"] 
# dev = ["full", "futures"]
# twitter = ["resource", "regex", "percent-encoding", ] 
# youtube = ["rusty_ytdl", "serde", "serde_json"]
# resource = []