[package]
name = "rusty_dl_cli"
authors = ["yatsu"] 
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["cli", "rusty_dl", "youtube", "twitter"]
description = "A CLI for downloading youtube videos, twitter medias (videos, images, gif) from tweets and files on the web."
readme = "README.md"
repository = "https://github.com/DevYatsu/rusty-dl"
categories = ["internet", "media", "utilities", "cli"]

[dependencies]
clap = {version =  "4.5.4", features = ["cargo"]}
rusty_dl = "1.0.8"
tokio = "1.37.0"
url = "2.5.0"
